feature: add footer component

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
