--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "jquery-validation": "^1.19.2",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
   }
