--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "jquery-validation": "^1.19.2",
     "normalize.css": "^8.0.1",
+    "postcss-loader": "^4.0.0",
     "slick-carousel": "^1.8.1"
   }
 }
